--- a/src/app/contacts/contact-detail/contact-detail.component.html
+++ b/src/app/contacts/contact-detail/contact-detail.component.html
@@ -1,1 +1,20 @@
-<p>contact-detail works!</p>
+<div class="panel-heading">
+    <h2 class="panel pull-left" style="padding-top: 7.5px; font-size: 25px;"><strong>Contact Name</strong></h2>
+</div>
+<div class="row panel-heading">
+    <div class="col-xs-12">
+        <img src="#" alt="Img goes here" class="img-responsive">
+    </div>
+    <div class="row">
+        <a href="#"><button class="btn btn-danger pull-right">Delete</button></a>
+        <a href="#"><button class="btn btn-primary pull-right">Edit</button></a>
+    </div>
+</div>
+<div class="row panel-body">
+    <div class="col-xs-12">
+        <ul>
+            <li class="list-group-item"><strong>Email: </strong></li>
+            <li class="list-group-item"><strong>Phone: </strong></li>
+        </ul>
+    </div>
+</div>
