--- a/src/app/contacts/contact-list/contact-list.component.html
+++ b/src/app/contacts/contact-list/contact-list.component.html
@@ -30,20 +30,14 @@
 </div> -->
 
 <div class="panel-heading clearfix">
-<h2 class="panel pull-left" style="padding-top: 7.5px; font-size: 25px;"><strong>Contacts</strong></h2>
-<a href="#"><button class="btn btn-success pull-right">New Contact</button></a>
-</div>
-
-<div class="row">
-    <div class="col-xs-12">
-        <a href="#" class="list-group-item clearfix" *ngFor="let contact of contacts">
-            <div class="pull-left">
-                <h4 class="list-group-item-heading">{{ contact.name }}</h4>
-                <!-- <p class="list-group-item-text">{{ contact.imageURL }}</p> -->
-            </div>
-            <span class="pull-right">
-                <img [src]="contact.imageURL" alt="{{ contact.name }}" class="img-responsive" style="max-height: 100px;">
-            </span>
-        </a>
+    <h2 class="panel pull-left" style="padding-top: 7.5px; font-size: 25px;"><strong>Contacts</strong></h2>
+    <a href="#"><button class="btn btn-success pull-right">New Contact</button></a>
     </div>
-</div>
+    
+    <div class="row">
+        <div class="col-xs-12">
+            <app-contact-item
+            *ngFor="let contact of contacts"
+            [contact]="contact"></app-contact-item>
+        </div>
+    </div>
