--- a/src/app/contacts/contact-list/contact-list.component.html
+++ b/src/app/contacts/contact-list/contact-list.component.html
@@ -38,6 +38,7 @@
         <div class="col-xs-12">
             <app-contact-item
             *ngFor="let contact of contacts"
-            [contact]="contact"></app-contact-item>
+            [contact]="contact"
+            (click)="onSelected(contact)"></app-contact-item>
         </div>
     </div>
