--- a/src/app/documents/documents.component.html
+++ b/src/app/documents/documents.component.html
@@ -1,1 +1,8 @@
-<p>documents works!</p>
+<div class="row">
+    <div class="col-md-5">
+        <app-document-list></app-document-list>
+    </div>
+    <div class="col-md-5">
+        <app-document-detail></app-document-detail>
+    </div>
+</div>
