--- a/src/app/contacts/contact-detail/contact-detail.component.html
+++ b/src/app/contacts/contact-detail/contact-detail.component.html
@@ -3,7 +3,7 @@
 </div>
 <div class="row panel-heading">
     <div class="col-xs-12">
-        <img src="{{ contact.imageURL }}" alt="Img goes here" class="img-responsive">
+        <img src="{{ contact.imageUrl }}" alt="Img goes here" class="img-responsive">
     </div>
     <div class="row">
         <a href="#"><button class="btn btn-danger pull-right">Delete</button></a>
