--- a/src/app/contacts/contact-item/contact-item.component.html
+++ b/src/app/contacts/contact-item/contact-item.component.html
@@ -4,6 +4,6 @@
         <!-- <p class="list-group-item-text">{{ contact.imageURL }}</p> -->
     </div>
     <span class="pull-right">
-        <img [src]="contact.imageURL" alt="{{ contact.name }}" class="img-responsive" style="max-height: 100px;">
+        <img [src]="contact.imageUrl" alt="{{ contact.name }}" class="img-responsive" style="max-height: 100px;">
     </span>
 </a>
