got the header navigation links to work

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<!-- My Solution -->
+<!-- My Solution without the extra div's-->
 <!-- <app-header></app-header>
 <div class="container pull-left">
     <router-outlet></router-outlet>
