--- a/src/app/documents/document-list/document-item/document-item.component.html
+++ b/src/app/documents/document-list/document-item/document-item.component.html
@@ -1,3 +1,3 @@
-<a class="list-group-item clearfix documentDiv" >
+<a [routerLink]="[index]" routerLinkActive="active" class="list-group-item clearfix documentDiv" >
     {{ document.name }}
 </a>
