--- a/src/app/contacts/contact-list/contact-list.component.html
+++ b/src/app/contacts/contact-list/contact-list.component.html
@@ -31,14 +31,13 @@
 
 <div class="panel-heading clearfix">
     <h2 class="panel pull-left" style="padding-top: 7.5px; font-size: 25px;"><strong>Contacts</strong></h2>
-    <a href="#"><button class="btn btn-success pull-right">New Contact</button></a>
+    <a routerLink="new"><button class="btn btn-success pull-right">New Contact</button></a>
     </div>
     
     <div class="row">
         <div class="col-xs-12">
             <app-contact-item
             *ngFor="let contact of contacts"
-            [contact]="contact"
-            (click)="onSelected(contact)"></app-contact-item>
+            [contact]="contact"></app-contact-item>
         </div>
     </div>
