--- a/src/app/contacts/contact-edit/contact-edit.component.html
+++ b/src/app/contacts/contact-edit/contact-edit.component.html
@@ -1,4 +1,4 @@
-<div class="panel panel-default">
+<!-- <div class="panel panel-default">
   <div class="panel-body">
     <form id="contact-edit">
       <div class="row">
@@ -79,4 +79,4 @@
 
     </form>
   </div>
-</div>
+</div> -->
