--- a/src/app/documents/document-edit/document-edit.component.html
+++ b/src/app/documents/document-edit/document-edit.component.html
@@ -29,7 +29,7 @@
             max="255"
             name="description"
             [ngModel]="document?.description"
-            >
+            #description="ngModel">
         </div>
       </div>
 
