--- a/src/app/contacts/contact-edit/contact-edit.component.html
+++ b/src/app/contacts/contact-edit/contact-edit.component.html
@@ -1,6 +1,6 @@
-<!-- <div class="panel panel-default">
+<div class="panel panel-default">
   <div class="panel-body">
-    <form id="contact-edit">
+    <form id="contact-edit" (ngSubmit)="onSubmit(f)" #f="ngForm">
       <div class="row">
         <div class="col-sm-12 form-group">
           <label for="name">Name:</label>
@@ -9,7 +9,11 @@
             id="name"
             class="form-control required"
             size="120"
-            max="120">
+            max="120"
+            name="name"
+            [ngModel]="contact?.name"
+            #name="ngModel"
+            required>
         </div>
       </div>
 
@@ -21,7 +25,15 @@
             id="email"
             class="form-control required"
             size="120"
-            max="255">
+            max="255"
+            name="email"
+            [ngModel]="contact?.email"
+            #email="ngModel"
+            required
+            pattern=“[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,3}$”>
+            <div *ngIf="!email.valid && email.touched">
+              Enter a valid Email address.
+            </div>
         </div>
       </div>
 
@@ -33,8 +45,14 @@
             id="phone"
             class="form-control invalid"
             size="150"
-            max="255">
-
+            max="255"
+            name="phone"
+            [ngModel]="contact?.phone"
+            #phone="ngModel"
+            pattern="\D*([2-9]\d{2})(\D*)([2-9]\d{2})(\D*)(\d{4})\D*">
+          <div *ngIf="!phone.valid && phone.touched">
+            Enter a valid phone number.
+          </div>
         </div>
       </div>
 
@@ -46,7 +64,10 @@
             id="imageUrl"
             class="form-control"
             size="150"
-            max="255">
+            max="255"
+            name="imageUrl"
+            [ngModel]="contact?.imageUrl"
+            #imageUrl="ngModel">
         </div>
       </div>
 
@@ -54,29 +75,37 @@
         <div class="form-group">
           <label for="groupList">Group Contacts:</label>
 
-          <div class="row" id="groupList"
-              style="min-height: 3rem;" >
+          <div class="row drop-area" id="groupList"
+              style="min-height: 3rem;" 
+              cdkDropList
+              [cdkDropListData]="groupContacts"
+              (cdkDropListDropped)="onDrop($event)">
 
             <div *ngFor="let contact of groupContacts; let i = index">
               <div>
-                <cms-contact-item class="col-sm-11" [contact]="contact"></cms-contact-item>
+                <app-contact-item class="col-sm-11" [contact]="contact"></app-contact-item>
                 <button class="btn btn-danger col-sm-2 deleteButton" (click)="onRemoveItem(i)">X</button>
               </div>
             </div>
-            <span class="dragMsg" *ngIf="groupContacts?.length < 1">Drag contacts in group here</span>
+            <!-- < goes before 1 -->
+            <!-- <span class="dragMsg" *ngIf="groupContacts?.length < 1">Drag contacts in group here</span>  -->
           </div>
 
         </div>
       </div>
 
-
+      <div
+        class="alert alert-danger"
+        *ngIf="!name.valid && !name.touched || !email.valid && !email.touched">
+        The Name and Email fields are required.
+      </div>
       <div class="row">
         <div class="col-xs-12 btn-toolbar">
-          <button class="btn btn-success" type="submit">Save</button>
+          <button class="btn btn-success" type="submit" [disabled]="!f.valid">Save</button>
           <button class="btn btn-primary" type="button" (click)="onCancel()">Cancel</button>
         </div>
       </div>
 
     </form>
   </div>
-</div> -->
+</div>
