--- a/src/app/contacts/contact-list/contact-list.component.html
+++ b/src/app/contacts/contact-list/contact-list.component.html
@@ -29,17 +29,33 @@
     </div>
 </div> -->
 
-<div class="panel-heading clearfix">
-    <h2 class="panel pull-left" style="padding-top: 7.5px; font-size: 25px;"><strong>Contacts</strong></h2>
-    <a routerLink="new"><button class="btn btn-success pull-right">New Contact</button></a>
+<div class="row">
+    <div class="col-xs-12">
+      <div class="panel panel-default">
+        <div class="panel-heading">
+          <div class="row">
+            <span class="title pad-left-right">Contacts</span>
+          </div>
+          <div class="row">
+            <div class="input-group pull-left pad-left-right col-xs-7">
+              <input type="text" #searchBox (keyup)="search(searchBox.value)" class="form-control" placeholder="Enter a search value">
+              <div class="glyphicon glyphicon-search input-group-addon" (click)="search(searchBox.value)"></div>
+            </div>
+            <div class="pull-right pad-left-right">
+              <a class="btn btn-success" [routerLink]="['new']">New Contact</a>
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
+  </div>
     
     <div class="row">
         <div class="col-xs-12">
             <div cdkDropList
                 [cdkDropListData]="contacts">
                 <div cdkDrag
-                *ngFor="let contact of contacts"
+                *ngFor="let contact of contacts | contactsFilter:term"
                 [cdkDragData]="contact">
                     <app-contact-item
                     [contact]="contact"></app-contact-item>
