--- a/src/app/contacts/contact-edit/contact-edit.component.html
+++ b/src/app/contacts/contact-edit/contact-edit.component.html
@@ -30,7 +30,7 @@
             [ngModel]="contact?.email"
             #email="ngModel"
             required
-            pattern=“[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,3}$”
+            pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,3}$"
             >
             <div *ngIf="!email.valid && email.touched">
               Enter a valid Email address.
